<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 CHIP (Creative Hardware for Integrated Products). All rights reserved.
  ~
  ~  Created by Ali Fakih on 4/16/19 5:17 PM
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  FITNESS FOR A PARTICULAR PURPOSE AND NONINFINGEMENT. IN NO EVENT SHALL THE
  ~  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  SOFTWARE.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org.licenses/>.
  ~
  ~  Last modified 4/16/19 3:24 PM.
  ~  Contact with author (Ali Fakih)
  ~  on Github:    https://github.com/fakiho
  ~  on Linkedin:  https://www.linkedin/in/fakiho/
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_editAccount"
            android:icon="@drawable/edit_icon"
            android:title="@string/edit_account" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan_code"
            android:icon="@drawable/order_history_icon"
            android:title="@string/scan_code" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addCars"
            android:icon="@drawable/cars_icon"
            android:title="@string/add_car"
            />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_becomeAMember"
            android:icon="@drawable/member_card_icon"
            android:title="@string/become_member" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/icon_about_us"
            android:title="@string/about_us" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_icon"
            android:title="@string/help" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chargeResi"
            android:title="@string/charge_car"
            android:icon="@drawable/charging_station"
            />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
        <!--android:icon="@drawable/baseline_exit_to_app_black_36"-->
    </group>



</menu>