<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/ll_error_to_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error_no_connection"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginBottom="@dimen/layout_padding_16dp"
            android:contentDescription="@string/status_image"
            android:tint="@color/exception_tint"
            app:srcCompat="@drawable/ic_cloud_off_black_24dp" />

        <!--Views for Any error occurred while make REST API call-->
        <LinearLayout
            android:id="@+id/ll_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_sorry_not_able_to_load"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:id="@+id/tv_error_feature_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

        <!--Views for No Internet connection-->
        <LinearLayout
            android:id="@+id/ll_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/oh_no"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_internet_connection"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/or_try_again"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_empty_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_empty_feature_image"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginBottom="@dimen/layout_padding_16dp"
            android:contentDescription="@string/status_image"
            android:tint="@color/exception_tint"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/tv_empty_feature_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>