<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_1_min"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    tools:context=".ui.activities.Entry.ValidatePin">

    <TextView
        android:id="@+id/tv_invalid_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/invalid_pin"
        android:textColor="#000"
        android:visibility="invisible" />

    <com.chip.parkpro1.utils.customViews.PINCheckView
        android:id="@+id/pin_check_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/lightestGray"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/cancel_button_background"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_validate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_main_disabled"
            android:text="@string/validate"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_resend_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/resend_pin"
        android:textColor="@color/lightestGray" />

</LinearLayout>